[project]
name = "wifipassword"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "speedtest>=0.0.1",
    "speedtest-cli>=2.1.3",
    "streamlit>=1.43.2",
]
